...
                                    <action selector="PhotoLibraryAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="RRe-AA-jrf"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ku-7t-mHu">
                                <rect key="frame" x="175" y="635" width="65" height="64"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Snap" backgroundImage="/Users/louisehq/Desktop/qhuang15/ClearView/icon/snap.png">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="SnapAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EcZ-gU-llQ"/>
                                </connections>
                            </button>
...
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <connections>
                        <outlet property="auto" destination="OOU-oP-LTF" id="9lG-d5-BlD"/>
                        <outlet property="manual" destination="Wqn-Qm-JwH" id="cPb-Ud-wpA"/>
                        <outlet property="previewView" destination="bNm-Q3-eBZ" id="0F2-sP-KW6"/>
                        <outlet property="retake" destination="7JQ-Bx-Khl" id="yvz-UB-w5d"/>
                        <outlet property="save" destination="31R-BU-Fb7" id="bdg-Yd-HDJ"/>
                        <segue destination="HGy-Uv-lSE" kind="show" identifier="saveOrig" id="ML7-Ac-UN5"/>
                        <segue destination="w1h-be-8SY" kind="show" identifier="previewToManual" id="zqG-WX-n7h"/>
                        <segue destination="rpK-5Z-2Yu" kind="show" identifier="previewToAuto" id="uC3-Uk-n6w"/>
...
                                    <action selector="saveAction:" destination="w1h-be-8SY" eventType="touchUpInside" id="yV5-fM-MqP"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="336-Yb-9ad">
                                <rect key="frame" x="143" y="43" width="128" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Remove Reflection"/>
                                <connections>
                                    <action selector="removeAction:" destination="w1h-be-8SY" eventType="touchUpInside" id="ELO-Wk-n3H"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
